--- a/.gitignore
+++ b/.gitignore
@@ -225,6 +225,6 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
-
+.vscode/
 
 # End of https://www.toptal.com/developers/gitignore/api/maven,eclipse,java,intellij
