--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,4 @@ buildNumber.properties
 .vscode/
 
 # End of https://www.toptal.com/developers/gitignore/api/maven,eclipse,java,intellij
+src/main/resources/application.properties
