--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ local.properties
 .loadpath
 .recommenders
 
+# application.properties
+*.properties
+
 # External tool builders
 .externalToolBuilders/
 
