feat: add registration form template and update .gitignore to include .devcontainer

--- a/.gitignore
+++ b/.gitignore
@@ -226,6 +226,7 @@ buildNumber.properties
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 .vscode/
+.devcontainer/
 
 # End of https://www.toptal.com/developers/gitignore/api/maven,eclipse,java,intellij
 src/main/resources/application.properties
