--- a/.github/workflows/t1-mealstagram-actions.yaml
+++ b/.github/workflows/t1-mealstagram-actions.yaml
@@ -61,9 +61,9 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
-          repository: ${{ secrets.GITHUB_USERNAME }}/project2-team1-manifest
+          repository: ${{ secrets.GH_USERNAME }}/project2-team1-manifest
           ref: main
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
 
       - name: Set up Image
         run: |
